feat(ghostty, zellij): attach or create zellij session, unbind Ctrl-o

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -7,3 +7,5 @@ font-family-bold-italic = Hack Nerd Font
 font-size = 12
 
 clipboard-paste-protection = false
+
+command = "/bin/zsh -l -c 'zellij attach || zellij'"
