feat(ghostty): add config link, set `mouse-hide-while-typing = true`

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,4 +1,6 @@
-theme = GruvboxDarkHard 
+# https://github.com/mitchellh/ghostty/blob/main/src/config/Config.zig
+
+theme = GruvboxDarkHard
 
 font-family = Hack Nerd Font
 font-family-bold = Hack Nerd Font
@@ -7,7 +9,7 @@ font-family-bold-italic = Hack Nerd Font
 font-size = 12
 
 clipboard-paste-protection = false
-
+mouse-hide-while-typing = true
 fullscreen = true
 
 command = "/bin/zsh -l -c 'zellij attach || zellij'"
