--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -2,10 +2,10 @@
 
 theme = GruvboxDarkHard
 
-font-family = Hack Nerd Font
-font-family-bold = Hack Nerd Font
-font-family-italic = Hack Nerd Font
-font-family-bold-italic = Hack Nerd Font
+font-family = JetBrains Mono
+font-family-bold = JetBrains Mono
+font-family-italic = JetBrains Mono
+font-family-bold-italic = JetBrains Mono
 font-size = 12
 
 clipboard-paste-protection = false
