feat(ghostty): revert window decorations disabling

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -10,8 +10,8 @@ font-size = 12
 
 clipboard-paste-protection = false
 mouse-hide-while-typing = true
-window-decoration = false
-macos-titlebar-style = tabs
+# window-decoration = false
+# macos-titlebar-style = tabs
 
 # No accidental quit
 keybind = ctrl+q=esc:q
