feat(ghostty): disable calt font ligatures

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -7,6 +7,7 @@ font-family-bold = JetBrains Mono
 font-family-italic = JetBrains Mono
 font-family-bold-italic = JetBrains Mono
 font-size = 12
+font-feature = -calt
 
 clipboard-paste-protection = false
 mouse-hide-while-typing = true
